# 42_wealdboar

./: .gitignore  README.md  bittricks.c  sh_echo_env_decode.c
42-exam-rank-02/: ft_printf.c  get_next_line.c  get_next_line.h  main.c  print_lim.c
42-exam-rank-04/: main.c
42-exam-rank-06/: CMakeLists.txt  en.exam_rank_06.subject.txt  mini_serv.c
TEST_BRANCHES/: test
cpp_modules/: README.md
ft_libasm/: Makefile  README.md  main  main.c  purec_test  purec_test.c
ft_printf/: .failed_test.c.swp  .failed_test.o.swp  .failed_test_2.c.swp  .ft_printf.c.swp  .ft_printf_base.c.swp  Makefile  diff.txt  failed_test.c  failed_test_2.c  ft_printf.c  ft_printf_tests.c
ft_server/: Dockerfile
ft_services/: .README.md.swp  Dockerfile  README.md  anime_script.sh  hits_and_triks.txt  influxdb.back.conf  minishell_блок_схема.odg  mysql_deploy_back.yaml  restart.sh  setup.sh  telegraf.back.conf  wildboarlb.yaml
kerrisk/signal/: CMakeLists.txt  complex_signal.cpp  find_process.cpp  procmask.cpp  sig_recv.cpp  sig_sndr.cpp  sigset.h  simple_signal.cpp
kerrisk/signal/siglib/: CMakeLists.txt  sigset.cpp  sigset.h
lchantel_gnl/: .get_next_line.c.swp  .get_next_line.h.swp  .get_next_line_bonus.c.swp  .get_next_line_bonus.h.swp  .get_next_line_utils.c.swp  .get_next_line_utils_bonus.c.swp  .gnl_test_3.c.swp  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  gnl_test_1.c  gnl_test_1.sh  gnl_test_2.c  some_main.c  test  wealdboar_gnl.c
libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_itoa.c  libft.h  (+15 more)
(+755 files in other folders)
